[gd_scene load_steps=31 format=2]

[ext_resource path="res://비트_음정으로 지정/beet.tscn" type="PackedScene" id=1]
[ext_resource path="res://흰건반/white_gun_ban.tscn" type="PackedScene" id=2]
[ext_resource path="res://검은건반/black_gun_ban.tscn" type="PackedScene" id=3]
[ext_resource path="res://main_건반판/note_array.gd" type="Script" id=4]
[ext_resource path="res://main_건반판/note_label.gd" type="Script" id=5]
[ext_resource path="res://음 노트/라.mp3" type="AudioStream" id=6]
[ext_resource path="res://음 노트/시.mp3" type="AudioStream" id=7]
[ext_resource path="res://NotoSansKR-Black.otf" type="DynamicFontData" id=8]
[ext_resource path="res://음 노트/레.mp3" type="AudioStream" id=9]
[ext_resource path="res://음 노트/도.mp3" type="AudioStream" id=10]
[ext_resource path="res://음 노트/도도.mp3" type="AudioStream" id=11]
[ext_resource path="res://음 노트/솔.mp3" type="AudioStream" id=12]
[ext_resource path="res://음 노트/파.mp3" type="AudioStream" id=13]
[ext_resource path="res://음 노트/파#.mp3" type="AudioStream" id=14]
[ext_resource path="res://음 노트/솔#.mp3" type="AudioStream" id=15]
[ext_resource path="res://음 노트/레#.mp3" type="AudioStream" id=16]
[ext_resource path="res://음 노트/도#.mp3" type="AudioStream" id=17]
[ext_resource path="res://음 노트/라#.mp3" type="AudioStream" id=18]
[ext_resource path="res://음 노트/미.mp3" type="AudioStream" id=19]
[ext_resource path="res://음악 재생기/music_play_system.tscn" type="PackedScene" id=20]
[ext_resource path="res://main_건반판/window_control.gd" type="Script" id=21]
[ext_resource path="res://main_건반판/Node.gd" type="Script" id=22]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]

[node name="white" type="Node2D" parent="."]
position = Vector2( 200, 0 )
scale = Vector2( 0.64, 1 )

[node name="도" parent="white" instance=ExtResource( 2 )]
position = Vector2( 150, 213 )
note_sound = ExtResource( 10 )
black_gun = NodePath("../../black/도")
note_name = "도"
array = NodePath("../../note_array")

[node name="레" parent="white" instance=ExtResource( 2 )]
position = Vector2( 301, 213 )
collision_layer = 2
note_sound = ExtResource( 9 )
black_gun = NodePath("../../black/도")
black_gun2 = NodePath("../../black/레")
note_name = "레"
array = NodePath("../../note_array")

[node name="미" parent="white" instance=ExtResource( 2 )]
position = Vector2( 452, 213 )
collision_layer = 2
note_sound = ExtResource( 19 )
black_gun = NodePath("../../black/레")
note_name = "미"
array = NodePath("../../note_array")

[node name="파" parent="white" instance=ExtResource( 2 )]
position = Vector2( 603, 213 )
collision_layer = 2
note_sound = ExtResource( 13 )
black_gun2 = NodePath("../../black/파")
note_name = "파"
array = NodePath("../../note_array")

[node name="솔" parent="white" instance=ExtResource( 2 )]
position = Vector2( 754, 213 )
collision_layer = 2
note_sound = ExtResource( 12 )
black_gun = NodePath("../../black/파")
black_gun2 = NodePath("../../black/솔")
note_name = "솔"
array = NodePath("../../note_array")

[node name="라" parent="white" instance=ExtResource( 2 )]
position = Vector2( 905, 213 )
collision_layer = 2
note_sound = ExtResource( 6 )
black_gun = NodePath("../../black/솔")
black_gun2 = NodePath("../../black/라")
note_name = "라"
array = NodePath("../../note_array")

[node name="시" parent="white" instance=ExtResource( 2 )]
position = Vector2( 1056, 213 )
collision_layer = 2
note_sound = ExtResource( 7 )
black_gun = NodePath("../../black/라")
note_name = "시"
array = NodePath("../../note_array")

[node name="도2" parent="white" instance=ExtResource( 2 )]
position = Vector2( 1207, 213 )
collision_layer = 2
note_sound = ExtResource( 11 )
note_name = "도2"
array = NodePath("../../note_array")

[node name="black" type="Node2D" parent="."]
position = Vector2( 200, -350 )
scale = Vector2( 0.8, 1 )

[node name="도" parent="black" instance=ExtResource( 3 )]
position = Vector2( 179, 461 )
note_sound = ExtResource( 17 )
note_name = "도#"
array = NodePath("../../note_array")

[node name="레" parent="black" instance=ExtResource( 3 )]
position = Vector2( 300, 460 )
note_sound = ExtResource( 16 )
note_name = "레#"
array = NodePath("../../note_array")

[node name="파" parent="black" instance=ExtResource( 3 )]
position = Vector2( 541, 459 )
note_sound = ExtResource( 14 )
note_name = "파#"
array = NodePath("../../note_array")

[node name="솔" parent="black" instance=ExtResource( 3 )]
position = Vector2( 663, 457 )
note_sound = ExtResource( 15 )
note_name = "솔#"
array = NodePath("../../note_array")

[node name="라" parent="black" instance=ExtResource( 3 )]
position = Vector2( 782, 458 )
note_sound = ExtResource( 18 )
note_name = "라#"
array = NodePath("../../note_array")

[node name="note_array" type="Node2D" parent="."]
script = ExtResource( 4 )
beet_arr = NodePath("../beet")

[node name="note_label" type="RichTextLabel" parent="note_array"]
margin_left = 251.0
margin_top = 460.0
margin_right = 1013.0
margin_bottom = 602.0
custom_fonts/mono_font = SubResource( 5 )
custom_fonts/bold_italics_font = SubResource( 6 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="array_remove_button" type="Button" parent="note_array"]
margin_right = 248.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "지우기"

[node name="array_remove_button2" type="Button" parent="note_array"]
margin_left = 3.0
margin_top = 253.0
margin_right = 251.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 2 )
text = "모두지우기"

[node name="change_button" type="Button" parent="note_array"]
margin_left = 3.0
margin_top = 511.0
margin_right = 251.0
margin_bottom = 592.0
rect_pivot_offset = Vector2( 176, 30 )
custom_fonts/font = SubResource( 2 )
text = "길이보기"

[node name="beet" parent="." instance=ExtResource( 1 )]
note_arr = NodePath("../note_array")

[node name="play_start_button" type="Button" parent="beet"]
margin_top = 85.0
margin_right = 248.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 2 )
text = "비트연주시작"

[node name="play_button" type="Button" parent="beet"]
margin_top = 169.0
margin_right = 248.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 2 )
text = "연주"

[node name="music_play_system" parent="." instance=ExtResource( 20 )]
beet_arr = NodePath("../beet")

[node name="beat_play_button" type="Button" parent="music_play_system"]
margin_left = 3.0
margin_top = 427.0
margin_right = 251.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 176, 30 )
custom_fonts/font = SubResource( 2 )
text = "연주 시작"

[node name="window_control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 21 )

[node name="MyWindow" type="WindowDialog" parent="window_control"]
visible = true
margin_left = 255.0
margin_top = 137.0
margin_right = 828.0
margin_bottom = 445.0
window_title = "SAVE"

[node name="save_button" type="Button" parent="window_control/MyWindow"]
margin_left = 170.0
margin_top = 205.0
margin_right = 418.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 2 )
text = "저장"

[node name="file_name" type="LineEdit" parent="window_control/MyWindow"]
margin_left = 136.0
margin_top = 144.0
margin_right = 447.0
margin_bottom = 178.0
custom_fonts/font = SubResource( 11 )

[node name="Label" type="Label" parent="window_control/MyWindow"]
anchor_right = 0.035
anchor_bottom = 0.045
margin_left = 84.0
margin_top = 146.0
margin_right = 240.945
margin_bottom = 181.14
custom_fonts/font = SubResource( 10 )
text = "저장명"

[node name="save_button" type="Button" parent="window_control"]
margin_top = 341.0
margin_right = 248.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 2 )
text = "저장"

[node name="Node" type="Node" parent="."]
script = ExtResource( 22 )

[connection signal="pressed" from="note_array/array_remove_button" to="note_array" method="array_remove"]
[connection signal="pressed" from="note_array/array_remove_button2" to="note_array" method="array_remove_all"]
[connection signal="pressed" from="note_array/change_button" to="note_array" method="_on_change_button_pressed"]
[connection signal="pressed" from="beet/play_start_button" to="beet" method="play_ready"]
[connection signal="button_down" from="beet/play_button" to="beet" method="_on_play_button_button_down"]
[connection signal="button_up" from="beet/play_button" to="beet" method="_on_play_button_button_up"]
[connection signal="pressed" from="music_play_system/beat_play_button" to="music_play_system" method="_on_beat_play_button_pressed"]
[connection signal="pressed" from="window_control/MyWindow/save_button" to="window_control" method="_on_save_button_pressed"]
[connection signal="pressed" from="window_control/save_button" to="window_control" method="open_window"]
